kube/components/fq/hms/fq-hms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fq-hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fq-hms
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fq-hms
    spec:
      containers:
      - image: vjain143/hive-metastore:3.0.0
        name: hive-metastore
        ports:
        - containerPort: 9083
          name: thrift
        volumeMounts:
          - name: fq-hms-configs-volume
            mountPath: /opt/hive-metastore/conf/metastore-site.xml
            subPath: metastore-site.xml
          - name: fq-hms-configs-volume
            mountPath: /opt/hive-metastore/conf/core-site.xml
            subPath: core-site.xml
          - name: fq-hms-configs-volume
            mountPath: /opt/hive-metastore/conf/metastore-log4j2.properties
            subPath: metastore-log4j2.properties
        command:
        - /opt/hive-metastore/bin/start-metastore
        args:
        - -p
        - "9083"
        - --skiphadoopversion
        imagePullPolicy: Always
      volumes:
        - name: fq-hms-configs-volume
          configMap:
            name: fq-hms-configs
