kube/components/fq/hms/fq-hms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fq-hms
  labels:
    app: fq-hms
spec:
  type: NodePort
  ports:
    - name: https
      port: 9083
      targetPort: 9083
      nodePort: 30983
      protocol: TCP
  selector:
    app: fq-hms
