kube/components/fq/hms/fq-hms-ingress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fq-allow-internal-traffic-to-hms
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ fq-hms, fq-minio, fq-mysql, fq-trino-coordinator, fq-hms-init-schema, openmetadata ] }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 9083
        - protocol: TCP
          port: 9404
        - protocol: TCP
          port: 9010
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
